AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(dmtcp, 0.1)

#AM_PATH_GLIB

AC_LANG_CPLUSPLUS
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CC_C_O
AC_PROG_RANLIB

AC_OUTPUT(Makefile src/Makefile examples/Makefile examples/01.echoserver/Makefile examples/02.frisbee/Makefile examples/03.forkexec/Makefile)
