AC_INIT([dmtcp],[0.99])

AM_CONFIG_HEADER([src/config.h])
AM_INIT_AUTOMAKE([dmtcp], [0.99])

AC_LANG_CPLUSPLUS
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CC_C_O
AC_PROG_RANLIB

AC_ARG_ENABLE([debug],
            [AS_HELP_STRING([--enable-debug],
                            [enable (very) verbose debug printouts 
                             and write log files to /tmp (default is disabled)])],
            [use_jassert=$enableval],
            [use_jassert=no])

if test "$use_jassert" = "yes"; then
  AC_DEFINE([DEBUG],[],[verbose debug printouts and log files in /tmp])
fi

AC_OUTPUT(Makefile src/Makefile examples/Makefile examples/01.echoserver/Makefile examples/02.frisbee/Makefile examples/03.forkexec/Makefile)

